        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=22341
        Text codecs should not use static data without locking

        * platform/text/TextCodecICU.cpp:
        * platform/text/mac/TextCodecMac.cpp:
        Made cached converters per-thread.

        * platform/text/TextEncodingRegistry.cpp:
        (WebCore::encodingRegistryMutex): Added a mutex for codec maps access.
        (WebCore::addToTextCodecMap): Don't use TextEncoding just to cacnonicalize the name, as it
        causes a dedalock due to a recursive call into registry.
        (WebCore::buildBaseTextCodecMaps): Added assertions.
        (WebCore::newTextCodec): Take a lock to avoid concurrent access to codec maps.
        (WebCore::atomicCanonicalTextEncodingName): Ditto.
        (WebCore::noExtendedTextEncodingNameUsed): Added a comment, explaining why locking is not
        necessary here.



Canonical link: https://commits.webkit.org/30806@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38597 268f45cc-cd09-0410-ab3c-d52691b4dbfc