WebCore/platform/text/TextEncodingRegistry.cpp
@@ -33,7 +33,9 @@
 #include <wtf/ASCIICType.h>
 #include <wtf/Assertions.h>
 #include <wtf/HashMap.h>
+#include <wtf/StdLibExtras.h>
 #include <wtf/StringExtras.h>
+#include <wtf/Threading.h>
 
 #if USE(ICU_UNICODE)
 #include "TextCodecICU.h"
@@ -113,6 +115,15 @@ struct TextCodecFactory {
 typedef HashMap<const char*, const char*, TextEncodingNameHash> TextEncodingNameMap;
 typedef HashMap<const char*, TextCodecFactory> TextCodecMap;
 
+static Mutex& encodingRegistryMutex()
+{
+    // We don't have to use AtomicallyInitializedStatic here because
+    // this function is called on the main thread for any page before
+    // it is used in worker threads.
+    DEFINE_STATIC_LOCAL(Mutex, mutex, ());
+    return mutex;
+}
+
 static TextEncodingNameMap* textEncodingNameMap;
 static TextCodecMap* textCodecMap;
 static bool didExtendTextCodecMaps;
@@ -154,13 +165,17 @@ static void addToTextEncodingNameMap(const char* alias, const char* name)
 
 static void addToTextCodecMap(const char* name, NewTextCodecFunction function, const void* additionalData)
 {
-    TextEncoding encoding(name);
-    ASSERT(encoding.isValid());
-    textCodecMap->add(encoding.name(), TextCodecFactory(function, additionalData));
+    const char* atomicName = textEncodingNameMap->get(name);
+    ASSERT(atomicName);
+    textCodecMap->add(atomicName, TextCodecFactory(function, additionalData));
 }
 
 static void buildBaseTextCodecMaps()
 {
+    ASSERT(isMainThread());
+    ASSERT(!textCodecMap);
+    ASSERT(!textEncodingNameMap);
+
     textCodecMap = new TextCodecMap;
     textEncodingNameMap = new TextEncodingNameMap;
 
@@ -199,6 +214,8 @@ static void extendTextCodecMaps()
 
 std::auto_ptr<TextCodec> newTextCodec(const TextEncoding& encoding)
 {
+    MutexLocker lock(encodingRegistryMutex());
+
     ASSERT(textCodecMap);
     TextCodecFactory factory = textCodecMap->get(encoding.name());
     ASSERT(factory.function);
@@ -211,6 +228,9 @@ const char* atomicCanonicalTextEncodingName(const char* name)
         return 0;
     if (!textEncodingNameMap)
         buildBaseTextCodecMaps();
+
+    MutexLocker lock(encodingRegistryMutex());
+
     if (const char* atomicName = textEncodingNameMap->get(name))
         return atomicName;
     if (didExtendTextCodecMaps)
@@ -238,6 +258,7 @@ const char* atomicCanonicalTextEncodingName(const UChar* characters, size_t leng
 
 bool noExtendedTextEncodingNameUsed()
 {
+    // If the calling thread did not use extended encoding names, it is fine for it to use a stale false value.
     return !didExtendTextCodecMaps;
 }
 
